# quickprofessionalwebsite3

./: CMakeLists.txt  Main.qml  Resources.qrc  SkillBar.qml  main.cpp
